EMS: Extended Commands to include a 'ref' field (passed from user). Also made Command class Serializable